--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
-.App {
+body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+ background-color: #ff770023;
+
+}
+.proyect{
   text-align: center;
+  font-size: 2.5rem;
+  margin-bottom: 10px;
+  color: white;
+  background-color:#FF7900 ;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.carousel{
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  margin: auto;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+}
+.carousel-container{
+  position: relative;
+  width: 100%;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  border: 1px;
+  box-shadow: 10px 5px 5px black;
+  
+}
+.left-arrow, .right-arrow{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 2rem;
+  cursor: pointer;
+  z-index: 1000;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFF3E0;
+  background-color:#E65100;
+  border-radius: 50%;
+  border: 1px solid white;
+}
+.left-arrow{
+  left:10px;
+}
+.right-arrow{
+  right: 10px;
+}
+.left-arrow:hover, .right-arrow:hover{
+  color: black;
+  background-color:#B7410E;
+}
+.displace{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.displace img{
+  max-width: 100%;
+  max-height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media(max-width:1000px) {
+  .carousel{
+    height: 400px;
   }
-  to {
-    transform: rotate(360deg);
+  .left-arrow, .right-arrow{
+    font-size: 1.5rem;
+    width: 30px;
+    height: 30px;
+  }
+}
+
+@media(max-width:769px) {
+  .carousel{
+    height: 400px;
+  }
+  .left-arrow, .right-arrow{
+   top:calc(50% - 25px);
+  }
+  .left-arrow{
+    left: 0;
+  }
+  .right-arrow{
+    right: 0;
+  }
+}
+@media(max-width:480px) {
+  .proyect{
+    font-size: 1.5rem;
+  }
+  .carousel{
+    height: 250px;
+  }
+  .left-arrow, .right-arrow{
+    font-size: 1.5rem;
+    width: 30px;
+    height: 30px;
+  }
+}
+@media(max-width:400px){
+  .left-arrow, .right-arrow{
+    width: 30px;
+    height: 30px;
   }
 }
